--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <div id="main">
       <div id="main_sub">
-    <section class="hero" style="margin-bottom:100px !important; padding-top: 0px; margin-top:-30%">
+    <section class="hero" style="margin-bottom:100px !important;padding-top: 0px; margin-top:-30%">
       <div class="hero-body">
         <div class="container cont has-text-centered aly">
           <h1 class="title has-text-grey-lighter has-text-weight-bold">
@@ -42,8 +42,8 @@
         </div>
       </div>
       <div style="width: fit-content; text-align: center;">
-      <input  type="checkbox" id = "form-acc"/>
-    <label for="form-acc">
+      <input  type="checkbox" id = "form-acc" style="background-color:#06de4396;"/>
+    <label for="form-acc" style="color:#06de4396">
       Get Early Access
     </label>
       </div>
