--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </div>
       <div style="width: fit-content; text-align: center;">
       <input  type="checkbox" id = "form-acc" style="background-color:#06de4396;"/>
-    <label for="form-acc" style="color:#06de4396">
-      Get Early Access
+    <label for="form-acc" style="color:white; background-color:#06de44;">
+      Request Invite
     </label>
       </div>
     </section>
@@ -73,7 +73,7 @@
     </div>-->
     </div>
 
-    <img src = "assets/images/Component 33 – 1.svg" id = "main_device" style="display: block;">
+    <img src = "assets/images/Component 33 – 1.svg" id = "main_device" style="position:absolute;  display: block;">
     </div>
     <form
       action="https://send.pageclip.co/zqs4Uv8TFsNPIZHq9u86Lp3LgNXSUo3j/mailing-form"
