--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
           </h2>
         </div>
       </div>
-      <div style="width: fit-content; text-align: center;">
+      <div style="width: fit-content; text-align: center; padding-left:15%;">
       <input  type="checkbox" id = "form-acc" style="background-color:#06de4396;"/>
-    <label for="form-acc" style="color:white; background-color:#06de44;">
+    <label for="form-acc" style="color:white; background-color:#06de44; padding-top:5px; padding-bottom:5px; padding-right:10px; padding-left:10px; border-radius: 10px;">
       Request Invite
     </label>
       </div>
@@ -73,7 +73,7 @@
     </div>-->
     </div>
 
-    <img src = "assets/images/Component 33 – 1.svg" id = "main_device" style="position:absolute;  display: block;">
+    <img src = "assets/images/Component 33 – 1.png" id = "main_device" style="position:absolute;  display: block;">
     </div>
     <form
       action="https://send.pageclip.co/zqs4Uv8TFsNPIZHq9u86Lp3LgNXSUo3j/mailing-form"
