--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
     <section class="hero" style="margin-bottom:100px !important;padding-top: 0px; margin-top:-30%">
       <div class="hero-body">
         <div class="container cont has-text-centered aly">
-          <h1 class="title has-text-grey-lighter has-text-weight-bold">
-            follege
-          </h1>
+          <img src="assets/images/output-onlinepngtools (30).png" style="width:100%;"/>
           <h2 class="subtitle has-text-grey-light">
             College at your
             <strong class="has-text-grey-light">fingertips</strong> <br />
