--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </div>
       </div>
       <div style="width: fit-content; text-align: center; padding-left:15%;">
-      <input  type="checkbox" id = "form-acc" style="background-color:#06de4396;"/>
-    <label for="form-acc" style="color:white; background-color:#06de44; padding-top:5px; padding-bottom:5px; padding-right:10px; padding-left:10px; border-radius: 10px;">
+      <input  type="checkbox" id = "form-acc" />
+    <label for="form-acc" style="color:white; background-color:#06de99; padding-top:5px; padding-bottom:5px; padding-right:10px; padding-left:10px; border-radius: 10px;">
       Request Invite
     </label>
       </div>
