--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ function loadBMAnimation(loader) {
    autoplay: 'true',
    path: "clutter.json"
  });
+}
  var loader2 = document.getElementsById("third");
 function loadBMAnimation(loader2) {
  var animation = bodymovin.loadAnimation({
@@ -45,6 +46,7 @@ function loadBMAnimation(loader2) {
    autoplay: 'true',
    path: "11750-meda-chat.json"
  });
+}
  var loader3 = document.getElementsById("fourth");
 function loadBMAnimation(loader3) {
  var animation = bodymovin.loadAnimation({
@@ -54,6 +56,7 @@ function loadBMAnimation(loader3) {
    autoplay: 'true',
    path: "2628-youre-in.json"
  });
+}
  var loader4 = document.getElementsById("fifth");
 function loadBMAnimation(loader4) {
  var animation = bodymovin.loadAnimation({
@@ -65,17 +68,13 @@ function loadBMAnimation(loader4) {
  });
 }
 for (var i = 0; i < loader.length; i++) {
- loadBMAnimation(loader[i]);
-}
+ loadBMAnimation(loader[i]);}
 for (var i = 0; i < loader2.length; i++) {
- loadBMAnimation(loader2[i]);
-}
+ loadBMAnimation(loader2[i]);}
 for (var i = 0; i < loader3.length; i++) {
- loadBMAnimation(loader3[i]);
-}
-for (var i = 0; i < loade4r.length; i++) {
- loadBMAnimation(loader4[i]);
-}
+ loadBMAnimation(loader3[i]);}
+for (var i = 0; i < loader4[i].length; i++) {
+ loadBMAnimation(loader4[i]);}
     </script>
     <link rel="stylesheet" href="./assets/vex/css/vex.css" />
     <link rel="stylesheet" href="./assets/vex/css/vex-theme-wireframe.css" />
