--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ function loadBMAnimation(loader) {
  var animation = bodymovin.loadAnimation({
    container: loader,
    renderer: "svg",
-   loop: 'true',
-   autoplay: 'true',
+   loop: true,
+   autoplay: true,
    path: "clutter.json"
  });
 }
