--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <script src="./assets/vex/js/vex.combined.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.0/lottie.js'></script>
     <script src="https://cdnjs.com/libraries/bodymovin" type="text/javascript"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
     <script>
       vex.defaultOptions.className = "vex-theme-wireframe";
       var loader = document.getElementsById("bodymovin");
@@ -132,7 +134,9 @@ for (var i = 0; i < loader4[i].length; i++) {
     <div class="container">
       <div class="row">
         <div id = "third" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-
+          <lottie-player
+          src="https://assets3.lottiefiles.com/datafiles/iMAIoaSAs29w2xR/data.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay >
+      </lottie-player>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
           <h2 style="color:white;text-align:center; font-weight: bolder ;" class="font-mont" >Your Sense Of Belonging</h2>
