--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ for (var i = 0; i < loader4[i].length; i++) {
       <div class="row">
         <div id = "third" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
           <lottie-player
-          src="https://assets3.lottiefiles.com/datafiles/iMAIoaSAs29w2xR/data.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay >
+          src="https://assets3.lottiefiles.com/datafiles/iMAIoaSAs29w2xR/data.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay >
       </lottie-player>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
