--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@ for (var i = 0; i < loader4[i].length; i++) {
       <div class="container">
         <div class="row">
           <div id = "fourth" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-  
+            <lottie-player
+    src="https://assets8.lottiefiles.com/packages/lf20_sU4ydN.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay >
+</lottie-player>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <h2 style="color:black;text-align:center; font-weight: bolder;" class="font-mont" >Your Sense Of Belonging</h2>
