--- a/index.html
+++ b/index.html
@@ -168,9 +168,11 @@ for (var i = 0; i < loader4[i].length; i++) {
       </div>
       <div class="fifth"  style="background-color:black; color:white;">
         <div class="container">
-          <div class="row">
+          <div class="row" style="margin-top:2%;">
             <div id = "fifth" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-    
+              <lottie-player
+    src="https://assets7.lottiefiles.com/packages/lf20_3SA6yI.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay >
+</lottie-player>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
               <h2 style="color:white;text-align:center; font-weight: bolder;" class="font-mont" >Your Sense Of Belonging</h2>
