--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@ for (var i = 0; i < loader4[i].length; i++) {
             <h1 style="width:100%; font-weight:bolder;" >Introducing the</h1>
             <h1 style="width:100%;color:#06de99; font-weight:bolder;" >follege social</h1>
           </div>
-          <div id = "bodymovin" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <lottie-player
+            src="https://assets8.lottiefiles.com/packages/lf20_3p3LG9.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay >
+        </lottie-player>   
           </div>
         </div>
         <div class="row">
