--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ for (var i = 0; i < loader4[i].length; i++) {
 
     <div id="second" class="second" style="margin-top:60%;">
       <div class="container font-mont">
-        <div class="row">
+        <div class="row" style="margin-top:2%;">
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="text-align: center; font-weight:bolder;">
             <h1 style="width:100%; font-weight:bolder;" >Introducing the</h1>
             <h1 style="width:100%;color:#06de99; font-weight:bolder;" >follege social</h1>
@@ -134,7 +134,7 @@ for (var i = 0; i < loader4[i].length; i++) {
 
     <div class="third"  style="background-color:black;">
     <div class="container">
-      <div class="row">
+      <div class="row" style="margin-top:2%;">
         <div id = "third" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
           <lottie-player
           src="https://assets3.lottiefiles.com/datafiles/iMAIoaSAs29w2xR/data.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay >
@@ -152,7 +152,7 @@ for (var i = 0; i < loader4[i].length; i++) {
     </div>
     <div class="fourth"  style="background-color:white;">
       <div class="container">
-        <div class="row">
+        <div class="row" style="margin-top:2%;">
           <div id = "fourth" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <lottie-player
     src="https://assets8.lottiefiles.com/packages/lf20_sU4ydN.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay >
@@ -188,7 +188,7 @@ for (var i = 0; i < loader4[i].length; i++) {
         </div>
         <div class="sixth" id="sixth" style="background-color:white; color:black;">
           <div class="container">
-            <div class="row">
+            <div class="row" style="margin-top:2%;">
               <div id = "third" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
       
               </div>
