--- a/index.html
+++ b/index.html
@@ -111,18 +111,18 @@ for (var i = 0; i < loader4[i].length; i++) {
     <div id="second" class="second" style="margin-top:60%;">
       <div class="container font-mont">
         <div class="row" style="margin-top:2%;">
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="text-align: center; font-weight:bolder;">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center; font-weight:bolder;">
             <h1 style="width:100%; font-weight:bolder;" >Introducing the</h1>
             <h1 style="width:100%;color:#06de99; font-weight:bolder;" >follege social</h1>
           </div>
+        </div>
+        <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <lottie-player
             src="https://assets8.lottiefiles.com/packages/lf20_3p3LG9.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay >
         </lottie-player>   
           </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-md-12 col-lg-12 " style="text-align: center;">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " style="text-align: center;">
             <h2 class="font-mont" style="width:90%; font-size:150%; text-align:center;">
               Removing the <span style="color:#06de99;">clutter</span> from the social
             </h2>
