--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@ for (var i = 0; i < loader4[i].length; i++) {
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 square">
             <lottie-player
             src="https://assets8.lottiefiles.com/packages/lf20_3p3LG9.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay >
         </lottie-player>   
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 " style="text-align: center;">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 square" style="text-align: center;">
             <h2 class="font-mont" style="width:90%; font-size:150%; text-align:center;">
               Removing the <span style="color:#06de99;">clutter</span> from the social
             </h2>
@@ -135,12 +135,12 @@ for (var i = 0; i < loader4[i].length; i++) {
     <div class="third"  style="background-color:black;">
     <div class="container">
       <div class="row" style="margin-top:2%;">
-        <div id = "third" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+        <div id = "third" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 square">
           <lottie-player
           src="https://assets3.lottiefiles.com/datafiles/iMAIoaSAs29w2xR/data.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay >
       </lottie-player>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 square">
           <h2 style="color:white;text-align:center; font-weight: bolder ;" class="font-mont" >Your Sense Of Belonging</h2>
         </div>
       </div>
@@ -153,12 +153,12 @@ for (var i = 0; i < loader4[i].length; i++) {
     <div class="fourth"  style="background-color:white;">
       <div class="container">
         <div class="row" style="margin-top:2%;">
-          <div id = "fourth" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+          <div id = "fourth" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 square">
             <lottie-player
     src="https://assets8.lottiefiles.com/packages/lf20_sU4ydN.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay >
 </lottie-player>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 square">
             <h2 style="color:black;text-align:center; font-weight: bolder;" class="font-mont" >Your Sense Of Belonging</h2>
           </div>
         </div>
@@ -171,12 +171,12 @@ for (var i = 0; i < loader4[i].length; i++) {
       <div class="fifth"  style="background-color:black; color:white;">
         <div class="container">
           <div class="row" style="margin-top:2%;">
-            <div id = "fifth" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div id = "fifth" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 square">
               <lottie-player
     src="https://assets7.lottiefiles.com/packages/lf20_3SA6yI.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay >
 </lottie-player>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 square">
               <h2 style="color:white;text-align:center; font-weight: bolder;" class="font-mont" >Your Sense Of Belonging</h2>
             </div>
           </div>
@@ -189,10 +189,10 @@ for (var i = 0; i < loader4[i].length; i++) {
         <div class="sixth" id="sixth" style="background-color:white; color:black;">
           <div class="container">
             <div class="row" style="margin-top:2%;">
-              <div id = "third" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+              <div id = "third" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 square">
       
               </div>
-              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 square">
                 <h2 style="color:black;text-align:center; font-weight: bolder;" class="font-mont" >Your Sense Of Belonging</h2>
               </div>
             </div>
