--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       href="https://s.pageclip.co/v1/pageclip.css"
       media="screen"
     />
+    <style>
+      html{
+        scroll-behavior: smooth;
+      }
+    </style>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
