--- a/apply.html
+++ b/apply.html
@@ -56,7 +56,7 @@
         <!-- End of head section -->
         <div class="text" style="text-align:center; width:100%; padding-left:1%; padding-right:1%; ">
             <div class="top" style="margin-bottom:5%; text-align: center;">
-                <p style="width:100%;"><h2 id = "h2" style="color:black; font-weight:bolder;"><span style="margin-right:5%;">A P P L Y </span>  <span style="margin-right:5%;"> F O R </span>  <span style="margin-right:5%;"> T H E </span></h2></p>  <h2 id = "h21" style="font-weight:bolder;"><p style="width:100%;"><span style="margin-right:10px;"> I N T E R N S H I P ! </span></p></h2>
+                <p style="width:100%;"><h2 id = "h2" style="color:black; font-weight:bolder;"><span style="margin-right:5%;">A P P L Y </span>  <span style="margin-right:5%;"> F O R </span>  <span> T H E </span></h2></p>  <h2 id = "h21" style="font-weight:bolder;"><p style="width:100%;"><span style="margin-right:10px;"> I N T E R N S H I P ! </span></p></h2>
             </div>
             <div class="middle">
                 <h5 id = "h5">Be More than just an intern</h5>
