--- a/apply.html
+++ b/apply.html
@@ -44,7 +44,7 @@
             <!--Menu Button-->
           <p style="margin:0px; padding:0px;"> <span class="center font_Al" style="color:white; font-size:170%;">follege</span> <span class="right cl" onclick="moveOut()"><img src="assets/images/menu.png" style="width:30px;"></span> </p>
           <div class="design" id ="Apply" style="width:80px; position:fixed; top:0; right:0px; display:none;">
-            <p >Apply</p></a>
+           <a href="aply.html" style="text-decoration: none; text-emphasis: none;"><p >Apply</p></a>
           </div>
             <div class="design" id="Home" style="width:80px; position:fixed; top:0px; right:0px; display:none;">
                 <a href="index.html" style="text-decoration: none; text-emphasis: none;"><p >HOME</p></a>
