--- a/apply.html
+++ b/apply.html
@@ -134,7 +134,7 @@
                                             Lorem ipsum idor herd bofd lorem ipsum idor color frolais 
                                         </div>
                                         <div class="register">
-                                            <button class="btn btn-warning font_san" style="font-weight:bolder;" href="#">PRODUCT MANAGEMENT</button>
+                                            <button class="btn btn-warning font_san" style="font-weight:bolder;" href="#">Product Management</button>
                                         </div>
                                     </div>
                         </div>
