--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@ for (var i = 0; i < loader4[i].length; i++) {
         <span>Send</span>
       </button>
     </form>
-    <p class="font-mont" id="App" style="color:white; background-color:black; padding:5px 10px 5px 10px; font-size:120%; font-weight:bolder; border-radius: 5px;text-align:center; position:fixed; bottom:180px; right:20px;"><a href="apply.html" style="text-decoration: none; color:white;">Apply</a></p>
-    <p class="font-mont" style="color:white; background-color:black; padding:5px 10px 5px 10px; font-size:40px; font-weight:bolder; border-radius: 5px;text-align:center; position:fixed; bottom:20px; right:20px;"><a href="#main" style="text-decoration: none; color:white;">&#8593;</a></p>
-    <a href="https://instagram.com/follege.app" style="text-align: center;"><img src="assets/images/38-instagram-3-512.png" style="width:50px; position: fixed; bottom:120px; right:20px; background-color: white; border-radius:45px;"/></a>
+    <p class="font-mont" id="App" style="color:white; background-color:black; padding:5px 10px 5px 10px; font-size:120%; font-weight:bolder; border-radius: 5px;text-align:center; position:fixed; right:10px;"><a href="apply.html" style="text-decoration: none; color:white;">Apply</a></p>
+    <p class="font-mont" style="color:white; background-color:black; padding:5px 10px 5px 10px; font-size:40px; font-weight:bolder; border-radius: 5px;text-align:center; position:fixed; bottom:20px; right:10px;"><a href="#main" style="text-decoration: none; color:white;">&#8593;</a></p>
+    <a href="https://instagram.com/follege.app" style="text-align: center;"><img src="assets/images/38-instagram-3-512.png" style="width:50px; position: fixed; bottom:120px; right:10px; background-color: white; border-radius:45px;"/></a>
 
     <div class="design" id="Home" style="width:80px; border-color:white; position:fixed;">
       <a href="index.html"><p >HOME</p></a>
@@ -248,10 +248,17 @@ second.style.width = screen.width + 'px';
 var apply = document.getElementById("App");
 
 var home = document.getElementById("Home");
-var up = screen.height - 100;
-apply.style.bottom = up + "px";
+
 
 var dev = document.getElementById('main_device');
+
+var isMobile = /iPhone|iPod|Android/i.test(navigator.userAgent);
+		if (isMobile && screen.width <= 730) {
+      var up = screen.height - 180;
+apply.style.bottom = up + "px";
+    }
+    else{  apply.style.bottom = "180px"; }
+
 
 if(screen.width > screen.height + 100)
 {
