--- a/apply.html
+++ b/apply.html
@@ -59,7 +59,7 @@
         <!--For large screens-->
 
         <div class="for_large" id="for_large" style="background-color:black; text-align:center; border-bottom-left-radius: 45%; border-bottom-right-radius: 45%; ">
-           <a href = "index.html"><img src = "assets/images/output-onlinepngtools (30).png" style="width:60^;" class="img_for_large"></a>
+           <a href = "index.html"><img src = "assets/images/output-onlinepngtools (30).png" style="width:60;" class="img_for_large"></a>
         </div>
 
         <!-- End for large screens -->
@@ -154,7 +154,7 @@
                                             Lorem ipsum idor herd bofd lorem ipsum idor color frolais 
                                         </div>
                                         <div class="register">
-                                            <button class="btn btn-warning font_san" style="font-weight:bolder;" href="#">PRODUCT MANAGEMENT</button>
+                                            <button class="btn btn-warning font_san" style="font-weight:bolder;" href="#">Product Management</button>
                                         </div>
                                     </div>
                         </div>
@@ -169,13 +169,12 @@
     <p style="width:100%; padding-bottom:2%;"><span class="left same">All Rights Reserved</span> <span class="right same">Follege Inc. &copy;2020</span></p>
     <p class="font_san" style="padding:0px; margin-bottom:0px;">follegeapp@gmail.com</p>
   </div>
-  <p class="font-mont" id = "li1" style="color:white; background-color:black; padding:5px 10px 5px 10px; font-size:40px; font-weight:bolder; border-radius: 5px;text-align:center; position:fixed; bottom:90px; right:20px;"><a  href="#h" style="text-decoration: none; color:white;">&#8593;</a></p>
-  <p class="font-mont" id = "li2" style="color:white; background-color:black; padding:5px 10px 5px 10px; font-size:40px; font-weight:bolder; border-radius: 5px;text-align:center; position:fixed; bottom:90px; right:20px;"><a  href="#for_large" style="text-decoration: none; color:white;">&#8593;</a></p>
+  <p class="font-mont" id = "li1" style="color:white; background-color:black; padding:5px 10px 5px 10px; font-size:40px; font-weight:bolder; border-radius: 5px;text-align:center; position:fixed; bottom:90px; right:20px;"><a  href="#t" style="text-decoration: none; color:white;">&#8593;</a></p>
+  
   <a href="https://instagram.com/follege.app" style="text-align: center;"><img src="assets/images/38-instagram-3-512.png" style="width:50px; position: fixed; bottom:190px; right:20px; background-color: white; border-radius:45px;"/></a>
 
 <script>
     var li1 = document.getElementById("li1");
-    var li2 = document.getElementById("li2");
   var for_large = document.getElementById('for_large');
     var foot = document.getElementById("foot").style.offsetHeight;
     var head = document.getElementById("h");
@@ -222,7 +221,7 @@ var isMobile = /iPhone|iPod|Android/i.test(navigator.userAgent);
             h2.style.fontSize  ="140px";
             h21.style.fontSize = "40px";
             t.style.paddingRight = "0px";
-            l.style.padding = "0px";            l.style.width = screen.width + "px";li1.style.display = "block"; li2.style.display = "none";
+            l.style.padding = "0px";            l.style.width = screen.width + "px";l
            
          } else {var h2 = document.getElementById("h2");var h21 = document.getElementById("h21");
            h23.style.fontSize = "300%"; h21.style.fontSize = "310%";
@@ -231,7 +230,6 @@ var isMobile = /iPhone|iPod|Android/i.test(navigator.userAgent);
             t2.style.display = "block";
             t.style.display ="none";
             li1.style.display = "none";
-            li2.style.display = "block";
             var h4 = document.getElementById("h4");
             h4.style.fontSize = "300%";
             var h5  =document.getElementById("h5");
