--- a/apply.html
+++ b/apply.html
@@ -108,7 +108,7 @@
                                     For coding enthusiasts, Primary role will be either web or app development 
                                 </div>
                                 <div class="register">
-                                    <button class="btn btn-warning font_san" style="font-weight:bolder;"href="https://forms.gle/FeUAJDfk7owAwth47">Web/App developer </button>
+                                    <a href="https://forms.gle/FeUAJDfk7owAwth47" style="text-decoration: none; text-emphasis: none;"><button class="btn btn-warning font_san" style="font-weight:bolder;">Web/App developer </button></a>
                                 </div>
                                 
                             </div>
@@ -125,7 +125,7 @@
                                             Show your love for designing here, let's make something beautiful!
                                         </div>
                                         <div class="register">
-                                            <button class="btn btn-warning font_san" style="font-weight:bolder;"href="https://forms.gle/uby4NddxVmLD8eft5">Graphic Designer</button>
+                                            <a href="https://forms.gle/uby4NddxVmLD8eft5" style="text-decoration: none; text-emphasis: none;"><button class="btn btn-warning font_san" style="font-weight:bolder;">Graphic Designer</button></a>
                                         </div>
                                     </div>
                         </div>
@@ -140,7 +140,7 @@
                                             Does market thrill you? Good for you, we got some thrilling tasks for you!
                                         </div>
                                         <div class="register">
-                                            <button class="btn btn-warning font_san" style="font-weight:bolder;" href="https://forms.gle/bfA6BHVMPP4Y6y4d9">Marketing and Research</button>
+                                            <a  href="https://forms.gle/bfA6BHVMPP4Y6y4d9" style="text-emphasis: none; text-decoration: none;"><button class="btn btn-warning font_san" style="font-weight:bolder;">Marketing and Research</button></a>
                                         </div>
                                         
                                     </div>
@@ -157,7 +157,7 @@
                                             Product Management is the future! Let's build an amazing product.
                                         </div>
                                         <div class="register">
-                                            <button class="btn btn-warning font_san" style="font-weight:bolder;" href="https://forms.gle/vzsvp3sqi2SShJsAA">Product Management</button>
+                                            <a href="https://forms.gle/vzsvp3sqi2SShJsAA" style="text-emphasis: none; text-decoration: none;"><button class="btn btn-warning font_san" style="font-weight:bolder;" >Product Management</button></a>
                                         </div>
                                     </div>
                         </div>
