--- a/apply.html
+++ b/apply.html
@@ -61,7 +61,7 @@
 
         <!--For large screens-->
 
-        <div class="for_large" id="for_large" style="background-color:black; text-align:center; border-bottom-left-radius: 45%; border-bottom-right-radius: 45%; ">
+        <div class="for_large" id="for_large" style="background-color:black; text-align:center; border-bottom-left-radius: 30px; border-bottom-right-radius: 30px; ">
            <a href = "index.html"><img src = "assets/images/output-onlinepngtools (30).png" style="width:60;" class="img_for_large"></a>
         </div>
 
