--- a/apply.html
+++ b/apply.html
@@ -174,8 +174,7 @@
   </div>
   <p class="font-mont" id = "li1" style="color:white; background-color:black; padding:5px 10px 5px 10px; font-size:40px; font-weight:bolder; border-radius: 5px;text-align:center; position:fixed; bottom:90px; right:20px;"><a  href="#t" style="text-decoration: none; color:white;">&#8593;</a></p>
   
-  <a href="https://instagram.com/follege.app" style="text-align: center;"><img src="assets/images/38-instagram-3-512.png" style="width:50px; position: fixed; bottom:190px; right:20px; background-color: white; border-radius:45px;"/></a>
-
+  <a href="https://instagram.com/follege.app" style="text-align: center; align-items: baseline;"><img src="assets/images/38-instagram-3-512.png" style="width:50px; position: fixed; bottom:120px; right:20px; background-color:white; padding-left:0.6px; padding-bottom:1.2px;border-top-left-radius:  25px; border-top-right-radius: 25px; border-bottom-left-radius: 25px; border-bottom-right-radius: 25px; "/></a>
 <script>
     var li1 = document.getElementById("li1");
   var for_large = document.getElementById('for_large');
