--- a/index.html
+++ b/index.html
@@ -221,15 +221,15 @@ for (var i = 0; i < loader4[i].length; i++) {
         <span>Send</span>
       </button>
     </form>
-    <p class="font-mont" id="App" style="color:white; background-color:black; padding:5px 10px 5px 10px; font-size:120%; font-weight:bolder; border-radius: 5px;text-align:center; position:fixed; right:20px;"><a href="apply.html" style="text-decoration: none; color:white;">Apply</a></p>
+    <p class="font-mont" id="App" style="color:white; background-color:black; padding:5px 10px 5px 10px; font-size:120%; font-weight:bolder; border-radius: 5px;text-align:center; position:fixed; right:20px;"><a href="apply" style="text-decoration: none; color:white;">Apply</a></p>
     <p class="font-mont" style="color:white; background-color:black; padding:5px 10px 5px 10px; font-size:40px; font-weight:bolder; border-radius: 5px;text-align:center; position:fixed; bottom:20px; right:20px;"><a href="#main" style="text-decoration: none; color:white;">&#8593;</a></p>
     <a href="https://instagram.com/follege.app" style="text-align: center; align-items: baseline;"><img src="assets/images/38-instagram-3-512.png" style="width:50px; position: fixed; bottom:120px; right:20px; background-color:white; padding-left:0.6px; padding-bottom:1.2px;border-top-left-radius:  25px; border-top-right-radius: 25px; border-bottom-left-radius: 25px; border-bottom-right-radius: 25px; "/></a>
 
     <div class="design" id="Home" style="width:80px; border-color:white; position:fixed;">
-      <a href="index.html"><p >HOME</p></a>
+      <a href="index"><p >HOME</p></a>
   </div>
   <div class="design" id ="Apply" style="width:80px; border-color:white; position:fixed; ">
-    <a href="apply.html"><p >Apply</p></a>,
+    <a href="apply"><p >Apply</p></a>,
 </div>
 
 <script>
