--- a/apply.html
+++ b/apply.html
@@ -45,12 +45,12 @@
         <!-- head section -->
         <div class="head" id="h" style="margin-bottom:5%; background-color:black; padding-top:3%;text-align:center; padding-bottom:1%; align-items: baseline;">
             <!--Menu Button-->
-          <p style="margin:0px; padding:0px;"> <span class="center font_Al" style="color:white; font-size:170%;"><a href="index.html"><img src="assets/images/output-onlinepngtools (30).png" style="width:35%;"></a> </span> <span class="right cl" onclick="moveOut()"><img src="assets/images/menu.png" style="width:30px;"></span> </p>
+          <p style="margin:0px; padding:0px;"> <span class="center font_Al" style="color:white; font-size:170%;"><a href="index"><img src="assets/images/output-onlinepngtools (30).png" style="width:35%;"></a> </span> <span class="right cl" onclick="moveOut()"><img src="assets/images/menu.png" style="width:30px;"></span> </p>
           <div class="design" id ="Apply" style="width:80px; position:fixed; top:0; right:0px; display:none;">
-            <p >Apply</p></a>
+            <a href="apply" style="text-decoration:none; text-emphasis:none;"><p >Apply</p></a>
           </div>
             <div class="design" id="Home" style="width:80px; position:fixed; top:0px; right:0px; display:none;">
-                <a href="index.html" style="text-decoration: none; text-emphasis: none;"><p >HOME</p></a>
+                <a href="index" style="text-decoration: none; text-emphasis: none;"><p >HOME</p></a>
             </div>
 
         </div>
@@ -62,7 +62,7 @@
         <!--For large screens-->
 
         <div class="for_large" id="for_large" style="background-color:black; text-align:center; border-bottom-left-radius: 30px; border-bottom-right-radius: 30px; ">
-           <a href = "index.html"><img src = "assets/images/output-onlinepngtools (30).png" style="width:60;" class="img_for_large"></a>
+           <a href = "index"><img src = "assets/images/output-onlinepngtools (30).png" style="width:60;" class="img_for_large"></a>
         </div>
 
         <!-- End for large screens -->
