--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ for (var i = 0; i < loader4[i].length; i++) {
 </div>
 
 <script>
-
+team.style.width = screen.width;
 // .col- (extra small devices - screen width less than 576px)
 // .col-sm- (small devices - screen width equal to or greater than 576px)
 // .col-md- (medium devices - screen width equal to or greater than 768px)
